fix(Css): Fix add friends button and remove un-needed wrapping div.

--- a/src/components/ui_kit/button/styles.scss
+++ b/src/components/ui_kit/button/styles.scss
@@ -15,6 +15,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  max-width: fit-content;
 
   svg {
     fill: transparent;
