--- a/src/components/ui_kit/popup/styles.scss
+++ b/src/components/ui_kit/popup/styles.scss
@@ -71,6 +71,7 @@
       top: 0;
       right: 0;
       z-index: 1;
+      display: inline-flex;
 
       .button {
         background: transparent;
